# basic_plugin_example

./: .gitignore  CMakeLists.txt  README.md  echowindow.cpp
echowindow/: CMakeLists.txt  echointerface.h  echowindow.cpp  echowindow.h  main.cpp
plugin/: CMakeLists.txt  echoplugin.cpp  echoplugin.h
